--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,11 +18,12 @@
  */
 
  .unit {
-   padding: 8px 0px 0px 1px;
-   font-size: 10px;
+   font-size: 8pt;
+   font-weight: normal;
+   padding-top: 5px;
  }
 
- .label {
-   padding-top: 3px;
-   text-align: right;
- }
+.label {
+  text-align: right;
+  padding-right: 1px;
+}
