--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,13 +19,13 @@
 
  .unit {
    font-size: 0.625em;
-   font-weight: normal;
    padding-top: 0.4em;
+   min-width: 1em;
  }
 
 .label {
   text-align: right;
-  padding-right: 0.125em;
   font-size: 1em;
-  font-weight: normal;
+  padding-right: 0.125em;
+  min-width: 1em;
 }
