[Feature Request] Fix the units #50

--- a/Resource_Monitor@Ory0n/prefs.ui
+++ b/Resource_Monitor@Ory0n/prefs.ui
@@ -894,6 +894,7 @@
                   <object class="GtkComboBoxText" id="net_unit_measure_combobox">
                     <items>
                       <item id="auto">Auto</item>
+                      <item id="b">Byte/Bit</item>
                       <item id="k">Kilo</item>
                       <item id="m">Mega</item>
                       <item id="g">Giga</item>
