Added display order #56

--- a/Resource_Monitor@Ory0n/prefs.ui
+++ b/Resource_Monitor@Ory0n/prefs.ui
@@ -83,35 +83,35 @@
               <object class="GtkBox">
                 <property name="margin-start">8</property>
                 <property name="orientation">vertical</property>
-                  <child>
-                    <object class="GtkCheckButton" id="extension_left_click_radiobutton_sm">
-                      <property name="label" translatable="1">Launch GNOME System Monitor</property>
-                      <property name="active">1</property>
-                    </object>
-                  </child>
-                  <child>
-                    <object class="GtkCheckButton" id="extension_left_click_radiobutton_u">
-                      <property name="label" translatable="1">Launch GNOME Usage</property>
-                      <property name="active">1</property>
-                      <property name="group">extension_left_click_radiobutton_sm</property>
-                    </object>
-                  </child>
-                  <child>
-                    <object class="GtkCheckButton" id="extension_left_click_radiobutton_custom">
-                      <property name="label" translatable="1">Custom program</property>
-                      <property name="active">1</property>
-                      <property name="group">extension_left_click_radiobutton_u</property>
-                    </object>
-                  </child>
-                  <child>
-                    <object class="GtkTextView" id="extension_left_click_textview_custom">
-                      <property name="focusable">1</property>
-                      <property name="buffer">extension_left_click_textview_textbuffer</property>
-                      <property name="accepts-tab">0</property>
-                      <property name="monospace">1</property>
-                      <property name="input-purpose">terminal</property>
-                    </object>
-                  </child>
+                <child>
+                  <object class="GtkCheckButton" id="extension_left_click_radiobutton_sm">
+                    <property name="active">1</property>
+                    <property name="label" translatable="yes">Launch GNOME System Monitor</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkCheckButton" id="extension_left_click_radiobutton_u">
+                    <property name="active">1</property>
+                    <property name="group">extension_left_click_radiobutton_sm</property>
+                    <property name="label" translatable="yes">Launch GNOME Usage</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkCheckButton" id="extension_left_click_radiobutton_custom">
+                    <property name="active">1</property>
+                    <property name="group">extension_left_click_radiobutton_u</property>
+                    <property name="label" translatable="yes">Custom program</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkTextView" id="extension_left_click_textview_custom">
+                    <property name="accepts-tab">0</property>
+                    <property name="buffer">extension_left_click_textview_textbuffer</property>
+                    <property name="focusable">1</property>
+                    <property name="input-purpose">terminal</property>
+                    <property name="monospace">1</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
@@ -202,6 +202,20 @@
                     </items>
                   </object>
                 </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="css-classes">main-label</property>
+                <property name="halign">start</property>
+                <property name="label">Items position</property>
+                <property name="margin-top">16</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkListBox" id="items_position_listbox">
+                <property name="margin-start">8</property>
+                <property name="selection-mode">none</property>
               </object>
             </child>
           </object>
